crates/rstest-bdd/tests/ui_macros/datatable_wrong_type.stderr
error[E0277]: the trait bound `String: TryFrom<Vec<Vec<String>>>` is not satisfied
 --> tests/ui_macros/datatable_wrong_type.rs:8:1
  |
8 | #[given("a step with wrong table type")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<Vec<Vec<String>>>` is not implemented for `String`
  |
  = help: `String` implements trait `From<T>`:
            From<&String>
            From<&mut str>
            From<&str>
            From<Box<str>>
            From<Cow<'_, str>>
            From<char>
  = note: required for `Vec<Vec<String>>` to implement `Into<String>`
  = note: required for `String` to implement `TryFrom<Vec<Vec<String>>>`
  = note: required for `Vec<Vec<String>>` to implement `TryInto<String>`
  = note: this error originates in the attribute macro `given` (in Nightly builds, run with -Z macro-backtrace for more info)
